--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,11 @@
     <color name="colorNoteColor5">#000000</color>
     <color name="colorDelete">#FF4842</color>
     <color name="colorSearchBackground">#333333</color>
+
+    <color name="colorPrimary1">#131EEA</color>
+    <color name="colorPrimaryDark1">#131EEA</color>
+    <color name="colorAccent1">#F13413</color>
+    <color name="colorLayerDark">#D6000000</color>
+    <color name="colorLayerSemiDark">#60000000</color>
+    <color name="colorTextPrimary">#212121</color>
 </resources>
