quick-action added and done this project

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -100,14 +100,18 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_image"
             app:tint="@color/colorIcon"/>
+
+
         <ImageView
-            android:id="@+id/imageAddWebLink"
+            android:id="@+id/imageProfile"
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
             android:contentDescription="@string/app_name"
             android:layout_marginStart="@dimen/_15sdp"
-            android:src="@drawable/ic_web_link"
+            android:src="@drawable/ic_account"
             app:tint="@color/colorIcon"/>
+
+
     </LinearLayout>
 
     <ImageView
